<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Backfront</string>
    <string name="app_id">198320220368270</string>
    <string name="title_activity_new_moment">New moment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_tos">Terms Of Service</string>
    <string name="title_activity_help">Help!</string>
    <string name="title_activity_login_path">Path authentication</string>
    <string name="title_activity_profile">My profile</string>
    <string name="title_activity_display_moment">View moment</string>
    <string name="title_activity_following">I\'m following them</string>
    <string name="title_activity_followers">They\'re following me</string>
    <string name="title_activity_manage_notif">Manage notifications</string>
    <string name="action_settings">Settings</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_camera">New moment</string>
    <string name="menu_settings">Settings</string>
    <string name="imageview_description">Image thumbnail</string>
    <string name="like_button_description">Like this moment</string>
    <string name="camera_button_description">Take picture</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="flash_button_description">Enable/disable flash</string>
    <string name="more_button_description">More</string>
    <string name="accept_photo_button_description">Accept photo</string>
    <string name="preview_top_image_description">Back image preview</string>
    <string name="preview_bottom_image_description">Front image preview</string>
    <string name="edit_caption_placeholder">Write optional caption...</string>
    <string name="edit_location_placeholder">Name this location...</string>
    <string name="share_button">Share</string>
    <string name="share_top_bar_title">Share</string>
    <string name="share_button_text">Share</string>
    <string name="share_save_image_button_text">Save picture to Gallery</string>
    <string name="profile_top_bar_title">Profile</string>
    <string name="following_top_bar_title">I\'m following them</string>
    <string name="followers_top_bar_title">They\'re following me</string>
    <string name="manage_notif_top_bar_title">Manage notifications</string>
    <string name="facebook_text">Facebook</string>
    <string name="twitter_text">Twitter</string>
    <string name="instagram_text">Instagram</string>
    <string name="path_text">Path</string>
    <string name="photo_album_name">Backfront</string>

</resources>
