<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flipview="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >
    
    <ProgressBar
        android:id="@+id/feed_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    
    <RelativeLayout
        android:id="@+id/feed_refresh_load_more"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_above="@+id/menu"
    	android:visibility="gone" >
	    <TextView
	        android:id="@+id/pull_refresh_text"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_alignParentTop="true"
		    android:text="Pull to refresh..."
		    android:textColor="@color/white"
		    android:layout_marginTop="5dip"
		    android:textSize="12sp" />
	    <ImageView
    	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_below="@id/pull_refresh_text"
		    android:src="@drawable/pull_arrow_down" />
	    <ImageView
    	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_above="@+id/load_more_text"
		    android:src="@drawable/pull_arrow_up" />
	    <TextView
	        android:id="@id/load_more_text"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_alignParentBottom="true"
		    android:text="Load more..."
		    android:textColor="@color/white"
		    android:layout_marginBottom="5dip"
		    android:textSize="12sp" />
	</RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/feed_offline"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="#ff1f1f1f"
    	android:layout_above="@id/menu"
    	android:visibility="gone" >
    	<ImageView
    	    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_centerInParent="true"
		    android:src="@drawable/offline_bg_stars"
		    android:scaleType="centerCrop" />
    	<ImageView
    	    android:id="@+id/feed_offline_pic"
    	    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:src="@drawable/offline_moon_sad"
		    android:background="@null" />
        <TextView
            android:id="@+id/feed_offline_text1"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/feed_offline_pic"
		    android:layout_centerHorizontal="true"
		    android:text="No internet connection"
		    android:textColor="@color/white"
		    android:layout_marginTop="15dip"
		    android:textSize="16sp"
		    android:textStyle="bold" />
        <TextView
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/feed_offline_text1"
		    android:layout_centerHorizontal="true"
		    android:text="Tap to try again"
		    android:textColor="@color/white"
		    android:textSize="14sp" />
    </RelativeLayout>
    
    
    <com.km.backflip.ui.vertical.VerticalViewPager
		android:id="@+id/pager"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_alignParentTop="true"
		android:layout_above="@id/menu" >
	</com.km.backflip.ui.vertical.VerticalViewPager>
	
    <se.emilsjolander.flipview.FlipView
        android:id="@+id/flipview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        flipview:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_alignParentTop="true"
		android:layout_above="@id/menu"
        android:visibility="gone" >
    </se.emilsjolander.flipview.FlipView>
    
    <RelativeLayout
        android:id="@+id/feed_message"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/black"
    	android:layout_above="@id/menu"
    	android:padding="5dip"
    	android:visibility="gone" >
        <ProgressBar
	        style="?android:attr/progressBarStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/feed_message_text" />
        <TextView
            android:id="@id/feed_message_text"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:text="Updating moments..."
		    android:textColor="@color/white"
		    android:textSize="12sp"
		    android:paddingLeft="10dip" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@id/menu"
	    android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:orientation="horizontal"
	    android:background="@color/dark_grey"
	    android:layout_alignParentBottom="true" >
    
	    <ImageButton
		    android:id="@+id/menu_feed_button"
		    android:layout_width="0px"
		    android:layout_height="fill_parent"
		    android:src="@drawable/icon_feed"
		    android:contentDescription="@string/menu_feed"
		    android:gravity="center"
		    android:layout_weight="1"
		    android:background="@color/black" />
	    
	    <TextView
	        android:layout_width="1px"
		    android:layout_height="fill_parent"
		    android:background="@color/light_grey" />
	    
	    <ImageButton 
		    android:id="@+id/menu_add_button"
		    android:layout_width="0px"
		    android:layout_height="fill_parent"
		    android:src="@drawable/icon_camera"
		    android:contentDescription="@string/menu_camera"
		    android:gravity="center"
		    android:layout_weight="1"
		    android:background="@color/dark_grey" />
	    
	    <TextView
	        android:layout_width="1px"
		    android:layout_height="fill_parent"
		    android:background="@color/light_grey" />
	    
	    <ImageButton 
		    android:id="@+id/menu_settings_button"
		    android:layout_width="0px"
		    android:layout_height="fill_parent"
		    android:src="@drawable/icon_profile_settings"
		    android:contentDescription="@string/menu_settings"
		    android:gravity="center"
		    android:layout_weight="1"
		    android:background="@color/dark_grey" />
	
	</LinearLayout>
    
</RelativeLayout>