<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <ProgressBar
        android:id="@+id/moment_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    
    <RelativeLayout 
        android:id="@+id/picture_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" >
        <TextView
            android:id="@+id/picture_not_found_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Unable to load picture..."
	        android:textColor="#ffffffff"
	        android:textSize="15sp" />
        <TextView  
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Try again?"
	        android:textColor="#ffffffff"
	        android:textSize="15sp"
	        android:textStyle="italic|bold"
	        android:layout_below="@id/picture_not_found_text"
	        android:layout_marginTop="5dp"
	        android:layout_centerHorizontal="true" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/moment_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unable to find the requested moment..."
        android:textColor="#ffffffff"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:visibility="gone" />
    
    
    <com.parse.ParseImageView
        android:id="@+id/imageBadPreview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/imageview_description"
        android:scaleType="centerCrop" />

    <com.parse.ParseImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/imageview_description"
        android:scaleType="centerCrop" />
    
    <ImageView
        android:id="@+id/moment_drop_shadow"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:src="@drawable/drop_shadow" />
    
    
    <RelativeLayout 
        android:id="@+id/moment_like_group"
        android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_gravity="right">
        
        <ImageButton
	        android:id="@+id/moment_like"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:src="@drawable/icon_like"
	        android:contentDescription="@string/like_button_description"
	        android:background="@null"
	        android:visibility="invisible" />
        
        <ImageView
	        android:id="@+id/moment_like_box_top"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/like_box_top"
	        android:layout_alignParentRight="true"
	        android:layout_alignBottom="@id/moment_like"
	        android:contentDescription="@string/like_button_description"
	        android:background="@null"
	        android:visibility="invisible" />
        
        <ImageView
	        android:id="@+id/moment_like_box_bottom_outside"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/like_box_bottom_outside"
	        android:layout_alignParentRight="true"
	        android:layout_below="@id/moment_like"
	        android:contentDescription="@string/like_button_description"
	        android:background="@null"
	        android:visibility="invisible" />
        
        <FrameLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
	        android:layout_below="@id/moment_like" >
	        <ImageButton
		        android:id="@+id/moment_like_box_bottom_inside"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/like_box_bottom_inside"
		        android:contentDescription="@string/like_button_description"
		        android:background="@null"
		        android:visibility="invisible" />
	        <TextView  
		        android:id="@+id/moment_like_count"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#ffffffff"
		        android:textSize="12sp"
		        android:layout_gravity="center" />
        </FrameLayout>
        
    </RelativeLayout>
    
    
    
    
    <ImageButton
        android:id="@+id/moment_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_more"
        android:layout_gravity="top|right"
        android:contentDescription="@string/more_button_description"
        android:background="@null"
        android:visibility="invisible" />
    
    <RelativeLayout 
        android:id="@+id/moment_details"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="top|left"
		android:padding="7dp"
		android:layout_marginRight="70dp" >
        <TextView  
	        android:id="@+id/moment_author"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:textColor="#fff"
	        android:textSize="15sp"
	        android:textStyle="bold"
	        android:shadowColor="@color/transparent_grey"
	        android:shadowDx="0.5"
	        android:shadowDy="1"
	        android:shadowRadius="1.0"
	        android:paddingBottom="4dp" />
        <ImageView
	        android:id="@+id/moment_picked"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/moment_author"
	        android:src="@drawable/icon_picked"
	        android:visibility="invisible"
	        android:layout_marginLeft="10dp" />
        <TextView
	        android:id="@+id/line"
	        android:layout_width="fill_parent"
	        android:layout_height="1px"
	        android:layout_below="@id/moment_picked"
	        android:background="@color/separator_grey"
	        android:layout_marginTop="5dp"
	        android:visibility="gone" />
        <TextView  
	        android:id="@+id/moment_caption"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/line"
	        android:layout_marginTop="2dp"
	        android:textColor="#fff"
	        android:textSize="12sp"
	        android:shadowColor="@color/transparent_grey"
	        android:shadowDx="0.5"
	        android:shadowDy="1"
	        android:shadowRadius="1.0"
	        android:visibility="gone" />
        <TextView  
	        android:id="@+id/moment_created"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/moment_caption"
	        android:layout_marginTop="2dp"
	        android:textColor="#eee"
	        android:textSize="10sp"
	        android:shadowColor="@color/transparent_grey"
	        android:shadowDx="0.5"
	        android:shadowDy="1"
	        android:shadowRadius="1.0" />
    </RelativeLayout>

</FrameLayout>